my-k8s-app-with-ingress/webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: riteshzode/flaskapp:v3  # Replace with the appropriate image version
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: 100m
            memory: "64Mi"
          limits:
            cpu: 200m
            memory: "128Mi"
